--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+    "webpack-dev-server": "^1.14.0",
+    "youtube-api-search": "0.0.5"
   },
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
@@ -25,6 +26,7 @@
     "react": "16.3.2",
     "react-dom": "16.3.2",
     "react-redux": "5.0.7",
-    "redux": "4.0.0"
+    "redux": "4.0.0",
+    "youtube-api-v3-search": "^1.0.2"
   }
 }
